alb.tf
resource "aws_alb" "alb" {
  name           = "customer-app-load-balancer"
  subnets        = "${[aws_subnet.dajay-dev-public-subnet-1.id, aws_subnet.dajay-dev-public-subnet-2.id]}"
  security_groups = "${[aws_security_group.alb-sg.id]}"
}

resource "aws_alb_target_group" "myapp-tg" {
  name        = "myapp-tg"
  port        = 80
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id = "${aws_vpc.dajay-dev-vpc.id}"

  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 3
    protocol            = "HTTP"
    matcher             = "200"
    path                = var.health_check_path
    interval            = 30
  }
}

#redirecting all incomming traffic from ALB to the target group
resource "aws_alb_listener" "myapp" {
  load_balancer_arn = "${aws_alb.alb.id}"
  port              = var.app_port
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = "${aws_alb_target_group.myapp-tg.arn}"
  }
}
