ecs.tf
resource "aws_ecs_cluster" "my-app-cluster" {
  name = "myapp-cluster"
}

data "template_file" "myapp" {
  template = file(".//templates//image//image.json")

  vars = {
    app_image      = var.app_image
    app_port       = var.app_port
    fargate_cpu    = var.fargate_cpu
    fargate_memory = var.fargate_memory
    aws_region     = var.AWS_REGION
  }
}

resource "aws_ecs_task_definition" "test-def" {
  family                   = "myapp-task"
  execution_role_arn       = "${aws_iam_role.ecs_task_execution_role.arn}"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = var.fargate_cpu
  memory                   = var.fargate_memory
  container_definitions    = data.template_file.myapp.rendered
}

resource "aws_ecs_service" "my-service" {
  name            = "myapp-service"
  cluster         = aws_ecs_cluster.my-app-cluster.id
  task_definition = aws_ecs_task_definition.test-def.arn
  desired_count   = var.app_count
  launch_type     = "FARGATE"

  network_configuration {
    security_groups  = "${[aws_security_group.ecs_sg.id]}"
    subnets          = "${[aws_subnet.dajay-dev-private-subnet-1.id, aws_subnet.dajay-dev-private-subnet-2.id]}"
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_alb_target_group.myapp-tg.arn
    container_name   = "myapp"
    container_port   = var.app_port
  }

  depends_on = [aws_alb_listener.myapp, aws_iam_role_policy_attachment.ecs_task_execution_role]
}
